<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".SettingsActivity"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="15dp"
            android:autofillHints="name"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:text="@string/emergency_contacts" />

    <ListView
        android:id="@+id/contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:paddingVertical="10dp"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:text="@string/add_new" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/accelerometer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/connected_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/no_device_registered"/>

        <TextView
            android:id="@+id/device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <TextView
        android:id="@+id/battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="18sp"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/connect_device_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:text="@string/connect_device_button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/gps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/enable_gps"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gps_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>