<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="160dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/emergency_contact_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="30dp"
        android:textSize="18sp"
        android:lines="2"
        android:text="@string/emergency_contact_info" />

    <ListView
        android:id="@+id/contact_list"
        android:layout_width="wrap_content"
        android:paddingTop="20dp"
        android:layout_height="200dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:text="@string/add_contact" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/skip" />

</LinearLayout>