<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/recent_fall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:textAlignment="center"
        android:text="@string/no_recent_falls" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/default_main"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/last_fall_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/last_fall_was" />

            <TextView
                android:id="@+id/last_fall_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/history_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fall_detected"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/timer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/alert_will_be_sent" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textStyle="bold"
                android:text="@string/timer_start_value" />

            <Button
                android:id="@+id/disable_alert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_button_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fall_recently"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/recent_fall_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/fall_detected_at" />

            <TextView
                android:id="@+id/recent_fall_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/contacts_alerted_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:textSize="25sp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/close_button_text" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>