<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NameActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_prompt" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/continue_button_text" />
</LinearLayout>