<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetUpAccelerometerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/connect_device_header" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:textSize="18sp"
        android:lines="2"
        android:text="@string/connect_device_info" />

    <ListView
        android:id="@+id/paired_devices_list"
        android:layout_width="fill_parent"
        android:layout_height="318dp"
        android:padding="20dp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continue_button_text" />

</LinearLayout>
